part1/1.11/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: ping-pong
          image: captainlevi20/ping-pong:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-storage
              mountPath: /shared
