part1/1.11/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
